--- a/Changelog.txt
+++ b/Changelog.txt
@@ -20,12 +20,11 @@ Added a Ajax call to update subusers;
 Added a new Ajax call for additional pages.
 Wording Changes;
 Changes Made: 20/05/17
-Passwords now to user 256SHA, Personal Salt keys & Site Wide Saltkeys
 
-Changes made 18/05/17 - For Testing:
+Changes made 27/06/17 - For Testing:
 Updated Login Scrips to use:
 SHA-256 hashing,
 Random Personal Salt Keys,
 Site Wide Salt Keys.
 Changed login Directories
-
+Added Emailing - Password Resets (user side only no admin resets currently)
